--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
     "core-js": "^2.4.1",
+    "jqgrid": "^4.6.4",
     "jquery": "^3.2.1",
     "json-server": "^0.12.0",
     "rxjs": "^5.1.0",
