--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "json-server": "^0.12.0",
+    "ngx-ueditor": "^1.0.7",
     "normalize.css": "^7.0.0",
     "rxjs": "^5.1.0",
     "semantic-ui": "^2.2.13",
