--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^2.5.1",
     "jqGrid": "^5.1.1",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
